crates/analyzer/tests/snapshots/errors__ctx_init.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: unsafe function `Context` can only be called in an unsafe function or block
  ┌─ compile_errors/ctx_init.fe:3:33
  │
3 │         let fake_ctx: Context = Context()
  │                                 ^^^^^^^ call to unsafe function
  │
  = Hint: put this call in an `unsafe` block if you're confident that it's safe to use here


